# gworkerd

./: .gitignore  .gitmodules  .travis.yml  Cargo.toml  README.md  build.sh  release.sh
assets/config/: example.json
assets/docker/: Dockerfile  rabbitmq.config
assets/sql/: mysql_worker_results.sql
daemon/: Cargo.toml
daemon/src/: consumer.rs  main.rs  monitor.rs  processor.rs  record_backend.rs  result_backend.rs  worker.rs
server/: Dockerfile
src/: config.rs  consumer.rs  record_backend.rs  worker.rs
webapp/: Brocfile.js  README.md  bower.json  ember-cli-build.js  package.json
webapp/app/: index.html  router.js
webapp/app/adapters/: application.js
webapp/app/components/: log-output.js
webapp/app/controllers/: application.js  index.js  jobs.js
webapp/app/helpers/: datetime-format.js
webapp/app/models/: job.js  result.js
webapp/app/routes/: application.js  auth-router.js  index.js  job.js  jobs.js  login.js
webapp/app/serializers/: job.js
webapp/app/styles/: _job-output.scss  _jobs-status.scss  _jobs-table.scss  _login.scss  _mockup.scss  _navigation.scss  app.scss
webapp/app/styles/helpers/: _animations.scss  _button.scss  _color.scss  _icons.scss  _mobile.scss  _table.scss  _typography.scss
webapp/app/templates/: application.hbs  index.hbs  job.hbs  jobs.hbs  login.hbs
webapp/app/templates/components/: job-table.hbs  log-output.hbs
webapp/config/: environment.js
webapp/server/: index.js
webapp/server/helpers/: array-filterby.js  array-find.js
webapp/server/mocks/: auth.js  jobs.js  server.js
webapp/tests/: index.html
(+2 files in other folders)
