[package]
name = "gworkerd"
version = "0.5.4"
authors = [ "Frederik Bosch <development@genkgo.nl>" ]

[dependencies]
docopt = "*"
flexi_logger = "~0.3.2"
log = "0.3.4"
mysql = "1.2.1"
rustc-serialize = "0.3.16"
stomp = "~0.11.0"
chrono = "~0.2.17"
router = "0.1.0"
iron = "~0.2.6"
hyper = "0.7.2"
staticfile = "*"
mount = "*"
urlencoded = "*"