[package]
name = "gworkerd"
version = "0.1.0"
authors = [ "Frederik Bosch <development@genkgo.nl>" ]

[dependencies]
docopt = "*"
flexi_logger = "0.3"
log = "0.3.1"
mysql = "0.17.1"
rustc-serialize = "0.3"
stomp = "~0.11.0"
chrono = "0.2"
router = "0.0.15"
iron = "0.2"
hyper = "0.6.13"
staticfile = "*"
mount = "*"
urlencoded = "*"